--- a/style.css
+++ b/style.css
@@ -4233,3 +4233,150 @@ object {
 		padding: 0;
 	}
 }
+
+
+
+
+/*article*/
+#article-img {
+    display: block;
+    width: 100%;
+}
+
+#article-date {
+    margin: 0 auto;
+    opacity: 0.4;
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    text-align: center;
+    margin-top: 4%;
+}
+
+#article-header {
+    opacity: 0.9;
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 44px;
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+#article-content {
+    width: 57%;
+}
+
+#article-category {
+    opacity: 0.4;
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    text-align: center;
+}
+
+#article-content hr {
+    opacity: 0.3;
+    background-color: #979797;
+    height: 1px;
+    margin-bottom: 0px;
+}
+
+#article-content p {
+    opacity: 0.6;
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 20px;
+    line-height: 30px;
+}
+
+#article-user {
+    min-height: 130px;
+    margin-bottom: 13%;
+    margin-top: 13%;
+}
+
+#article-utext {
+    padding-left: 39%;
+    display: inline;
+}
+
+#article-utext #article-uname {
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 24px;
+    margin: 0px;
+    margin-bottom: 8px;
+    opacity: 1;
+}
+
+#article-utext #article-udes {
+    opacity: 0.4;
+    color: #000000;
+    font-family: "Century Gothic";
+    font-size: 20px;
+    line-height: 29px;
+}
+
+#article-user #article-avatar {
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 10%;
+}
+
+#article-coments {
+    height: 60px;
+    width: 221px;
+    border: 1px solid #DEDEDE;
+    margin: 0 auto;
+}
+
+#article-coments p {
+    color: #7F7F7F;
+    font-family: "Century Gothic";
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    padding-top: 6%;
+}
+
+#article-coments p i {
+    opacity: 0.5;
+    font-size: 12px;
+    color: black;
+}
+
+@media screen and ( max-width: 782px ) {
+    #article-user #article-avatar {
+        float: none;
+        margin: 0 auto;
+        display: block;
+    }
+
+    #article-utext #article-udes {
+        text-align: center;
+    }
+
+    #article-utext #article-uname {
+        text-align: center;
+    }
+
+    #article-utext {
+        padding-left: 0%;
+    }
+
+    #article-content {
+        width: 100%;
+    }
+}
+/*article*/
