--- a/assets/css/custom/contact-us.css
+++ b/assets/css/custom/contact-us.css
@@ -309,7 +309,22 @@ span.wpcf7-not-valid-tip {
 .middle-white-block{
   padding: 150px 0 150px 0;
   transition: all .4s linear;
+}
 
+.office-location-content h3 {
+    margin-bottom: 20px !important;
+    color: white;
+    font-size: 30px !important;
+    font-family: "Century Gothic-Bold" !important;
+    font-weight: 100 !important;
+}
+
+.form-title p strong {
+    font-family: "Century Gothic-Bold";
+}
+
+.middle-white-block {
+    font-family: "Century Gothic";
 }
 
 @media screen and (max-width: 768px){
@@ -325,6 +340,12 @@ span.wpcf7-not-valid-tip {
 
   .loc, .hear {
     width:100%;
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 769px){
+  .office-location{
+    line-height: 1.35;
   }
 }
 
@@ -345,7 +366,7 @@ span.wpcf7-not-valid-tip {
   margin: 0px auto!important;
 }
 .proud-text{
-  max-width:865px;
+  max-width:868px;
   margin: 0px auto!important;
 }
 
@@ -414,7 +435,10 @@ span.wpcf7-not-valid-tip {
   margin:0!important;
 }
 .director-wrapper{
-  height:350px;
+  height:360px;
+}
+.director-wrapper .wpb_column .vc_column-inner > .wpb_wrapper{
+  padding-bottom: 22px;
 }
 .director-name{
   font-family: "Century Gothic";
@@ -422,7 +446,7 @@ span.wpcf7-not-valid-tip {
   font-size: 24px;
   color: #292929;
   font-weight:bold;
-  padding-top:20px;
+  padding-top:0px;
 }
 .contacts-email{
   font-family:"Century Gothic";
