--- a/assets/css/custom/services.css
+++ b/assets/css/custom/services.css
@@ -8,9 +8,8 @@
 
 .services-header p {
   color: #FFFFFF;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 36px;
-  font-weight: bold;
   line-height: 50px;
   text-align: center;
   max-width: 777.73px;
@@ -19,14 +18,14 @@
 }
 
 .service-approach {
-  margin-bottom: 70px;
+    margin-top: 165px;
+    margin-bottom: 200px;
 }
 
 .service-approach p {
   color: #FFFFFF;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 30px;
-  font-weight: bold;
   line-height: 37px;
   text-align: center;
   margin: 0 auto;
@@ -36,20 +35,23 @@
 .approach-container {
   max-width: 853px;
   margin: 0 auto;
-  margin-bottom: 107px;
+  margin-bottom: 150px;
 }
 
 .approach-number {
   color: #FFFFFF;
-  font-family: "Century Gothic";
-  font-size: 20px;
-  font-weight: bold;
+  font-family: "Century Gothic-Bold";
+  font-size: 18px;
   letter-spacing: 2px;
-  line-height: 31px;
+  line-height: 27px;
 }
 
 .number-services {
   color: #FF1C1C;
+}
+
+.text-approach {
+  margin-bottom: 0px;
 }
 
 .text-approach p {
@@ -57,19 +59,19 @@
   opacity: 0.6;
   color: #FFFFFF;
   font-family: "Century Gothic";
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 18px;
+  line-height: 27px;
 }
 
 .provide-services {
-  margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 100px;
 }
 
 .provide-services h2 {
   color: #FFFFFF;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 30px;
-  font-weight: bold;
   line-height: 37px;
   text-align: center;
   margin: 0 auto;
@@ -86,12 +88,24 @@
   margin-bottom: 0px;
 }
 
+.hide-btn button {
+  height: 50px;
+  width: 200px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  padding-right: 67px !important;
+}
+
+.hide-btn i {
+  right: 54px !important;
+}
+
 .service-description h3 {
   color: #FFFFFF;
-  font-family: "Century Gothic";
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: 2px;
+  font-family: "Century Gothic-Bold";
+  font-size: 21px;
+  letter-spacing: 3px;
   line-height: 24px;
 }
 
@@ -159,6 +173,17 @@
   line-height: 22px !important;
   width: 250px!important;
   height: 55px!important;
+  padding: 15px 20px!important;
+}
+
+.close-btn a:hover {
+  transition: 0.3s ease;
+  opacity: 0.8;
+}
+
+.close-btn button:hover {
+  transition: 0.3s ease;
+  opacity: 0.8;
 }
 
 .close-b {
@@ -201,9 +226,8 @@
 
 .contact-us h3 {
   color: #FFFFFF;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 24px;
-  font-weight: bold;
   line-height: 29px;
   text-align: center;
   margin: 0 auto;
@@ -257,25 +281,24 @@
   width: 250px;
   margin-top: 0px !important;
 }
-
+/* SVG circles --<< */
 #circles-wrap{
   color: white;
   position: relative;
   text-align:center;
-  height: 384px;
+  height: 360px;
   width:100%;
 }
 #circles-wrap svg{
   position: absolute;
   display: block;
-  height: auto;
-  max-width: 644px;
-  overflow: visible;
+  width: 100%;
   margin: auto auto;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  padding: 10px
 }
 #circles-wrap svg circle{
   fill: none;
@@ -308,10 +331,11 @@
   font-size: 20px;
   line-height: 32px;
 
-  margin:59px auto 136px auto!important;
+  margin:59px auto 0px auto!important;
   max-width: 676px;
 }
-
+/* >>-- */
+/* Vertical line --<< */
 .services-vl-wrap{
   position: relative;
   height: 157px;
@@ -332,7 +356,7 @@
   right: 0;
   bottom: 0;
 }
-
+/* >>-- */
 @media (max-width: 1220px) {
   .service-img {
 	margin-right: 0px;
