--- a/assets/css/custom/contact-us.css
+++ b/assets/css/custom/contact-us.css
@@ -321,6 +321,7 @@ span.wpcf7-not-valid-tip {
 
 .form-title p strong {
     font-family: "Century Gothic-Bold";
+    font-weight: normal;
 }
 
 .middle-white-block {
