--- a/assets/css/custom/partnership.css
+++ b/assets/css/custom/partnership.css
@@ -13,8 +13,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   color:#ffffff;
   font-size:36px;
   line-height:44px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
 }
 
 .partnert p{
@@ -42,8 +41,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   color:rgba(0, 0, 0, 0.3);
   font-size:18px;
   line-height:22px;
-  font-weight:bold;
-  font-family: 'Century Gothic';
+  font-family: 'Century Gothic-Bold';
 
 }
 
@@ -64,7 +62,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   font-family: 'Century Gothic';
   max-width:1026px;
   margin:0 auto;
-  padding-top:150px;
+  padding-top:100px;
 }
 
 .icons{
@@ -88,8 +86,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   margin-top: 15px;
   font-size:16px;
   line-height:20px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
 }
 
 .icon-text p{
@@ -121,15 +118,17 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   margin-bottom:50px;
   font-size:30px;
   line-height:37px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
   color: #000000;
 }
 
 .grey-text p{
-  font-size:20px;
-  line-height:28px;
-  font-family: 'Century Gothic';
+    font-size: 18px;
+    line-height: 27px;
+    color: black;
+    opacity: .6;
+    max-width: 470px;
+    font-family: 'Century Gothic';
 }
 
 .red-line {
@@ -144,8 +143,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
 .h-it-w h2{
   font-size:30px;
   line-height:37px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
   color: #000000;
 }
 
@@ -155,7 +153,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   height: 2px;
   background: #FE3939;
   position: absolute;
-  top: 48px;
+  top: 75px;
   left: 0;
   right: 0;
   margin: auto;
@@ -196,17 +194,18 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
 .h-it-w-4 h3{
   font-size:20px;
   line-height:24px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
   padding-left:70px;
   color: #000000;
 }
 
 .h-it-w-4 p{
-  font-size:20px;
-  line-height:28px;
+  font-size:18px;
+  line-height:27px;
+  color: rgba(0,0,0,0.6);
   font-family: 'Century Gothic';
   padding-left:70px;
+  margin-bottom: 80px;
 }
 
 .h-it-w-4 a{
@@ -231,14 +230,15 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
 .become-par h2{
   font-size:30px;
   line-height:37px;
-  font-family: 'Century Gothic';
-  font-weight:bold;
+  font-family: 'Century Gothic-Bold';
   color: #000000;
 }
 
 .become-par p{
-  font-size:20px;
-  line-height:28px;
+  font-size: 18px;
+  opacity: 0.6;
+  color: black;
+  line-height: 27px;
   font-family: 'Century Gothic';
 }
 
@@ -248,9 +248,12 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   line-height: 22px !important;
   background-color: #fe3939 !important;
   padding: 15px 45px !important;
-  font-family: 'Century Gothic';
+  font-weight: 100;
+  font-family: 'Century Gothic-Bold';
 }
-
+.become-par a:hover, .become-par button:hover {
+    opacity: .8;
+}
 .arr-col, .mob2block{
   display:none !important;
 }
@@ -278,9 +281,8 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
 #amount {
   opacity: 0.4;
   color: #3B3B3B !important;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 16px;
-  font-weight: bold;
   line-height: 20px;
   text-align: right;
   width: 100px;
@@ -314,16 +316,17 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   height: 310px;
   max-width: 471px;
   box-shadow: 0 8px 15px 0 rgba(0,0,0,0.08);
-  padding: 3%
+  padding: 3%;
+  border-radius: 5px;
+  background: white;
 }
 
 #procent {
   padding-top: 80px;
   margin-bottom: 45px;
   color: #222222;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 36px;
-  font-weight: bold;
   line-height: 44px;
   text-align: center;
 }
@@ -394,6 +397,15 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   .grey-text h2 {
 	font-size:25px;
   }
+}
+
+@media (min-width: 911px){
+    .iconps{
+        margin: 0;
+    }
+    .icon-text{
+        margin-left: -18px;
+    }
 }
 
 @media (max-width: 910px) {
@@ -518,8 +530,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
 	color:#ffffff;
 	font-size:25px;
 	line-height:40px;
-	font-family: 'Century Gothic';
-	font-weight:bold;
+	font-family: 'Century Gothic-Bold';
 	text-align:center;
   }
 
@@ -573,8 +584,7 @@ div, p, a, li, td { -webkit-text-size-adjust:none; }
   .h-it-w-4 h3{
 	font-size:20px;
 	line-height:24px;
-	font-family: 'Century Gothic';
-	font-weight:bold;
+	font-family: 'Century Gothic-Bold';
 	padding-top:70px;
 	padding-left:0;
 	color: #000000;
