--- a/assets/css/custom/portfolio.css
+++ b/assets/css/custom/portfolio.css
@@ -4,9 +4,8 @@
   background-size: cover;
   text-align: center;
   color: #FFFFFF;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 36px;
-  font-weight: bold;
   line-height: 44px;
   background-position: center;
   position: relative;
@@ -26,19 +25,23 @@
   max-width: 700px;
 }
 .portfolio-container{
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
+
+.portfolio-container .vc_column-inner:first-child {
+  padding: 0;
+}
+
 .portfolio-title{
-  margin: 0 auto;
+  margin: 115px auto 150px auto;
   text-align: center;
   max-width: 670px;
 }
 .portfolio-title-main{
   color: #292929;
-  font-family: "Century Gothic";
+  font-family: "Century Gothic-Bold";
   font-size: 30px;
-  font-weight: bold;
   line-height: 37px;
   text-align: center;
 }
@@ -62,6 +65,7 @@
   text-align: center;
   width: 100%;
   background: #F9F9F9;
+  margin-top: 100px;
 }
 .portfolio-work-with-us .portfolio-work-with-us-title{
   font-weight: bold;
@@ -75,6 +79,16 @@
 }
 .page:not(.home) #content{
   padding-bottom: 0;
+}
+.portfolio-work-with-us-btn a{
+  background:#FE3939 !important;
+  padding: 17px 70px !important;
+  font-size: 18px !important;
+  line-height: 22px !important;
+  font-family: 'Century Gothic-Bold'!important;
+}
+.portfolio-work-with-us-btn a:hover{
+  opacity: .8;
 }
 @media (max-width: 1024px){
   .portfolio-container{
